--- a/puphpet/config.yaml
+++ b/puphpet/config.yaml
@@ -131,6 +131,7 @@ php:
             - cli
             - intl
             - mcrypt
+            - curl
         pear: {  }
         pecl:
             - pecl_http
