--- a/puphpet/config.yaml
+++ b/puphpet/config.yaml
@@ -4,13 +4,13 @@ vagrantfile-local:
         box: puphpet/debian75-x32
         box_url: puphpet/debian75-x32
         hostname: null
-        memory: '512'
+        memory: '1024'
         chosen_provider: virtualbox
         network:
             private_network: 192.168.56.101
             forwarded_port:
-                G0TLspAEyjDb:
-                    host: '5716'
+                4GcegG8dUxpL:
+                    host: '9290'
                     guest: '22'
         provider:
             virtualbox:
@@ -32,7 +32,7 @@ vagrantfile-local:
                     - '--hiera_config /vagrant/puphpet/puppet/hiera.yaml'
                     - '--parser future'
         synced_folder:
-            D7GrBOz89KA4:
+            RX6kpJ2LByYX:
                 source: ./
                 target: /var/www
                 sync_type: default
@@ -85,11 +85,11 @@ apache:
         - php
         - rewrite
     vhosts:
-        o40vpj92TfOm:
-            servername: awesome.dev
+        yA7THrnxcK0c:
+            servername: darau.dev
             serveraliases:
-                - www.awesome.dev
-            docroot: /var/www/awesome
+                - www.darau.dev
+            docroot: /var/www
             port: '80'
             setenv:
                 - 'APP_ENV dev'
@@ -109,14 +109,14 @@ apache:
 nginx:
     install: '1'
     vhosts:
-        vL0NVzgUICAk:
+        CVRj7etWzYYT:
             server_name: darau.dev
-            www_root: /var/www/darau.dev
+            server_aliases:
+                - www.darau.dev
+            www_root: /var/www
             listen_port: '80'
             index_files:
-                - index.html
-                - index.htm
-                - index.php
+                - app.php
             envvars:
                 - 'APP_ENV dev'
             ssl_cert: ''
@@ -158,7 +158,7 @@ mysql:
     root_password: '123'
     adminer: 0
     databases:
-        DS4TQ8Mc3EUr:
+        uT8QpO8F0qD4:
             grant:
                 - ALL
             name: dbname
