Added relation between task and profile

--- a/src/SayAndDo/TaskBundle/Resources/config/doctrine/Task.orm.yml
+++ b/src/SayAndDo/TaskBundle/Resources/config/doctrine/Task.orm.yml
@@ -16,4 +16,8 @@ SayAndDo\TaskBundle\Entity\Task:
         status:
             type: string
             length: 16
+    manyToOne:
+        profile:
+            targetEntity: SayAndDo\ProfileBundle\Entity\Profile
+            inversedBy: tasks
     lifecycleCallbacks: {  }
