--- a/src/SayAndDo/ProfileBundle/Resources/config/doctrine/Profile.orm.yml
+++ b/src/SayAndDo/ProfileBundle/Resources/config/doctrine/Profile.orm.yml
@@ -11,4 +11,9 @@ SayAndDo\ProfileBundle\Entity\Profile:
         title:
             type: string
             length: 255
+    oneToMany:
+        tasks:
+            targetEntity: SayAndDo\TaskBundle\Entity\Task
+            mappedBy: profile
+            cascade: ["persist", "merge"]
     lifecycleCallbacks: {  }
