--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,11 @@
+say_and_do_promise:
+    resource: "@SayAndDoPromiseBundle/Resources/config/routing.yml"
+    prefix:   /promise
+
+say_and_do_proof:
+    resource: "@SayAndDoProofBundle/Resources/config/routing.yml"
+    prefix:   /proof
+
 say_and_do_task:
     resource: "@SayAndDoTaskBundle/Resources/config/routing.yml"
     prefix:   /task
