Added promise entity + update for task entity

--- a/src/SayAndDo/TaskBundle/Resources/config/doctrine/Task.orm.yml
+++ b/src/SayAndDo/TaskBundle/Resources/config/doctrine/Task.orm.yml
@@ -20,4 +20,8 @@ SayAndDo\TaskBundle\Entity\Task:
         profile:
             targetEntity: SayAndDo\ProfileBundle\Entity\Profile
             inversedBy: tasks
+    oneToOne:
+        promise:
+            targetEntity: SayAndDo\PromiseBundle\Entity\Promise
+            mappedBy: promise
     lifecycleCallbacks: {  }
