Added Proof entity + relations

--- a/src/SayAndDo/PromiseBundle/Resources/config/doctrine/Promise.orm.yml
+++ b/src/SayAndDo/PromiseBundle/Resources/config/doctrine/Promise.orm.yml
@@ -11,4 +11,9 @@ SayAndDo\PromiseBundle\Entity\Promise:
         task:
           targetEntity: SayAndDo\TaskBundle\Entity\Task
           inversedBy: task
+    oneToMany:
+        proofs:
+            targetEntity: SayAndDo\ProofBundle\Entity\Proof
+            mappedBy: promise
+            cascade: ["persist", "merge"]
     lifecycleCallbacks: {  }
