--- a/src/SayAndDo/AnalyzisBundle/Resources/config/routing.yml
+++ b/src/SayAndDo/AnalyzisBundle/Resources/config/routing.yml
@@ -1,3 +1,22 @@
 say_and_do_analyzis_homepage:
     path:     /es/
     defaults: { _controller: SayAndDoAnalyzisBundle:Default:index }
+
+say_and_do_analyzis_homepage.add:
+    path:     /es/add
+    defaults:
+        _controller: SayAndDoAnalyzisBundle:Default:addDocument
+    methods:   [POST]
+
+say_and_do_analyzis_homepage.view:
+    path:     /es/{id}
+    defaults:
+        _controller: SayAndDoAnalyzisBundle:Default:viewDocument
+    methods:   [GET]
+
+say_and_do_analyzis_homepage.remove:
+    path:     /es/remove/{id}
+    defaults:
+        _controller: SayAndDoAnalyzisBundle:Default:removeDocument
+    methods:   [GET]
+
