Updated Profile entity yaml

--- a/src/SayAndDo/ProfileBundle/Resources/config/doctrine/Profile.orm.yml
+++ b/src/SayAndDo/ProfileBundle/Resources/config/doctrine/Profile.orm.yml
@@ -20,6 +20,6 @@ SayAndDo\ProfileBundle\Entity\Profile:
     oneToMany:
         tasks:
             targetEntity: SayAndDo\TaskBundle\Entity\Task
-            mappedBy: profile
+            mappedBy: tasks
             cascade: ["persist", "merge"]
     lifecycleCallbacks: {  }
