--- a/src/SayAndDo/TaskBundle/Resources/config/routing.yml
+++ b/src/SayAndDo/TaskBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 say_and_do_task_homepage:
-    path:     /hello/{name}
+    path:     /add_task/
     defaults: { _controller: SayAndDoTaskBundle:Default:index }
+
+say_and_do_task_success:
+    path:     /task_success/{name}
+    defaults: { _controller: SayAndDoTaskBundle:Default:success }
