--- a/src/SayAndDo/ProfileBundle/Resources/config/doctrine/Profile.orm.yml
+++ b/src/SayAndDo/ProfileBundle/Resources/config/doctrine/Profile.orm.yml
@@ -20,6 +20,5 @@ SayAndDo\ProfileBundle\Entity\Profile:
     oneToMany:
         tasks:
             targetEntity: SayAndDo\TaskBundle\Entity\Task
-            mappedBy: tasks
-            cascade: ["persist", "merge"]
+            mappedBy: profile
     lifecycleCallbacks: {  }
