--- a/src/SayAndDo/PromiseBundle/Resources/config/doctrine/Promise.orm.yml
+++ b/src/SayAndDo/PromiseBundle/Resources/config/doctrine/Promise.orm.yml
@@ -10,10 +10,9 @@ SayAndDo\PromiseBundle\Entity\Promise:
     oneToOne:
         task:
           targetEntity: SayAndDo\TaskBundle\Entity\Task
-          inversedBy: task
+          inversedBy: promise
     oneToMany:
         proofs:
             targetEntity: SayAndDo\ProofBundle\Entity\Proof
             mappedBy: promise
-            cascade: ["persist", "merge"]
     lifecycleCallbacks: {  }
