--- a/src/SayAndDo/TaskBundle/Resources/config/routing.yml
+++ b/src/SayAndDo/TaskBundle/Resources/config/routing.yml
@@ -3,5 +3,5 @@ say_and_do_task_homepage:
     defaults: { _controller: SayAndDoTaskBundle:Default:index }
 
 say_and_do_task_success:
-    path:     /task_success/{name}
+    path:     /task_success/
     defaults: { _controller: SayAndDoTaskBundle:Default:success }
