Added points column for profile

--- a/src/SayAndDo/ProfileBundle/Resources/config/doctrine/Profile.orm.yml
+++ b/src/SayAndDo/ProfileBundle/Resources/config/doctrine/Profile.orm.yml
@@ -17,6 +17,8 @@ SayAndDo\ProfileBundle\Entity\Profile:
         political_party:
             type: string
             length: 255
+        points:
+            type: integer
     oneToMany:
         tasks:
             targetEntity: SayAndDo\TaskBundle\Entity\Task
