--- a/src/SayAndDo/ProfileBundle/Resources/config/services.yml
+++ b/src/SayAndDo/ProfileBundle/Resources/config/services.yml
@@ -5,5 +5,5 @@ services:
 #    say_and_do_profile.example:
 #        class: %say_and_do_profile.example.class%
 #        arguments: [@service_id, "plain_value", %parameter%]
-    profile.service:
+    sd_profile.service:
         class: SayAndDo\ProfileBundle\Service\ProfileService
