--- a/src/SayAndDo/ProfileBundle/Resources/config/doctrine/Profile.orm.yml
+++ b/src/SayAndDo/ProfileBundle/Resources/config/doctrine/Profile.orm.yml
@@ -11,6 +11,8 @@ SayAndDo\ProfileBundle\Entity\Profile:
         title:
             type: string
             length: 255
+        description:
+            type: text
         position:
             type: string
             length: 255
