--- a/src/SayAndDo/AnalyzisBundle/Resources/config/services.yml
+++ b/src/SayAndDo/AnalyzisBundle/Resources/config/services.yml
@@ -2,6 +2,20 @@ parameters:
 #    say_and_do_analyzis.example.class: SayAndDo\AnalyzisBundle\Example
 
 services:
-#    say_and_do_analyzis.example:
-#        class: %say_and_do_analyzis.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
+    say_and_do.analysis.type.article:
+        class: Elastica\Type
+        factory_service: fos_elastica.index.articles
+        factory_method: getType
+        arguments:
+            - articles
+
+    say_and_do.analysis.repository.article:
+        class: SayAndDo\AnalyzisBundle\Service\Repository
+        calls:
+            - [setType, [@say_and_do.analysis.type.article]]
+            - [setIndex, [@fos_elastica.index.articles]]
+
+    say_and_do.analysis.threshold:
+        class: SayAndDo\AnalyzisBundle\Service\ThresholdService
+        calls:
+            - [setType, [@say_and_do.analysis.type.article]]
