--- a/src/SayAndDo/ProfileBundle/Resources/config/routing.yml
+++ b/src/SayAndDo/ProfileBundle/Resources/config/routing.yml
@@ -1,3 +1,8 @@
 say_and_do_profile_homepage:
     path:     /hello/{name}
     defaults: { _controller: SayAndDoProfileBundle:Default:index }
+say_and_do_profile_details:
+    path: /profile/{id}
+    defaults:
+        _controller: SayAndDoProfileBundle:Profile:details
+    methods: [GET]
