Added profile list page

--- a/src/SayAndDo/ProfileBundle/Resources/config/routing.yml
+++ b/src/SayAndDo/ProfileBundle/Resources/config/routing.yml
@@ -1,6 +1,7 @@
-say_and_do_profile_homepage:
-    path:     /hello/{name}
-    defaults: { _controller: SayAndDoProfileBundle:Default:index }
+say_and_do_profile_profiles:
+    path:     /profiles
+    defaults: { _controller: SayAndDoProfileBundle:Profile:index }
+
 say_and_do_profile_details:
     path: /profile/{id}
     defaults:
