--- a/src/SayAndDo/AnalyzisBundle/Resources/config/routing.yml
+++ b/src/SayAndDo/AnalyzisBundle/Resources/config/routing.yml
@@ -2,15 +2,11 @@ say_and_do_analyzis_homepage:
     path:     /es/
     defaults: { _controller: SayAndDoAnalyzisBundle:Default:index }
 
-say_and_do_analyzis_homepage.init:
-    path:     /es/init
-    defaults: { _controller: SayAndDoAnalyzisBundle:Default:init }
-
 say_and_do_analyzis_homepage.add:
     path:     /es/add
     defaults:
         _controller: SayAndDoAnalyzisBundle:Default:addDocument
-    methods:   [POST]
+    methods:   [POST,GET]
 
 say_and_do_analyzis_homepage.view:
     path:     /es/view/{id}
@@ -29,4 +25,8 @@ say_and_do_analyzis_homepage.query:
     defaults:
         _controller: SayAndDoAnalyzisBundle:Default:queryDocuments
     methods:   [POST, GET]
+
+say_and_do_analyzis_homepage.init:
+    path:     /es/init
+    defaults: { _controller: SayAndDoAnalyzisBundle:Default:init }
 
