--- a/src/SayAndDo/AdminBundle/Resources/config/routing.yml
+++ b/src/SayAndDo/AdminBundle/Resources/config/routing.yml
@@ -1,3 +1,23 @@
 say_and_do_admin_homepage:
     path:     /hello/{name}
     defaults: { _controller: SayAndDoAdminBundle:Default:index }
+
+say_and_do_admin_tasks:
+    path:     /tasks
+    defaults:
+        _controller: SayAndDoAdminBundle:Default:tasks
+
+say_and_do_admin_tasks_view:
+    path:     /tasks/view/{id}
+    defaults:
+        _controller: SayAndDoAdminBundle:Default:viewTask
+
+say_and_do_admin_tasks_delete:
+    path:     /tasks/delete/{id}
+    defaults:
+        _controller: SayAndDoAdminBundle:Default:deleteTask
+
+say_and_do_admin_tasks_confirm:
+    path:     /tasks/confirm/{id}
+    defaults:
+        _controller: SayAndDoAdminBundle:Default:confirmTask
